@@ -1,3 +1,7 @@
+Nov 16, 2005
+
+  * Avoid XPCE http servers to be garbage collected.
+
 Oct 17, 2005
 
   * ADDED: Pass peer from threaded HTTP server to request.
